--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,21 +14,35 @@ services:
       - ./message.sql:/docker-entrypoint-initdb.d/message.sql  
     networks:
       - twotier
-  
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 60s
+
   flask-app:
-    image: zarkhan625/flaskapp:latest
+    build:
+      context: .
+    container_name: flask-app
     ports:
-      - "5000:5000"
+      - "5000:5009"
     environment:
       MYSQL_HOST: mysql
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
       MYSQL_DB: devops
     depends_on:
       - mysql
     networks:
       - twotier
     restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:5000/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
 networks:
   twotier:
